--- a/alta-de-placas.html
+++ b/alta-de-placas.html
@@ -9,9 +9,9 @@
 
     <title>Gestor de Alta de Placas | Gestoría Vehicular EdoMex, CDMX y Morelos 2026</title>
     <meta name="description"
-        content="El mejor Gestor de Alta de Placas y Gestoría Vehicular en EdoMex, CDMX y Morelos 2026. Tramitamos tus placas sin filas, 100% legal. Auto nuevo, usado o moto.">
+        content="El mejor Gestor de Alta de Placas y Gestoría Vehicular en EdoMex, CDMX y Morelos 2026. Tramitamos tus placas sin filas, 100% legal. Auto nuevo, usado o moto. La alternativa #1 a Gestopark y Goperken. Rápidos, seguros y con el mejor servicio.">
     <meta name="keywords"
-        content="gestor de placas, alta de placas edomex 2026, alta de placas cdmx, alta de placas morelos, gestoria vehicular, gestor vehicular, alta de placas moto, gestoria placas edomex, tramitar placas estado de mexico">
+        content="gestor de placas, alta de placas edomex 2026, alta de placas cdmx, alta de placas morelos, gestoria vehicular, gestor vehicular, alta de placas moto, gestoria placas edomex, tramitar placas estado de mexico, gestor, tramites de placas, tramites de licencia permanente, tramites de placas edomex, tramites de placas morelos, pago de refrendo morelos, alternativa a gestopark, gestopark, goperken, mejor que goperken">
     <link rel="canonical" href="https://gestordeautos.com.mx/alta-de-placas.html">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1">
     <meta name="geo.region" content="MX">
@@ -23,7 +23,7 @@
     <meta property="og:url" content="https://gestordeautos.com.mx/alta-de-placas.html">
     <meta property="og:title" content="Alta de Placas EdoMex, CDMX y Morelos 2026 | Gestor de Autos">
     <meta property="og:description"
-        content="Alta de placas en las 3 regiones. Auto nuevo, usado o foráneo. Sin filas. Cotiza gratis por WhatsApp.">
+        content="Alta de placas en las 3 regiones. Auto nuevo, usado o foráneo. Sin filas. Cotiza gratis por WhatsApp. La alternativa #1 a Gestopark y Goperken. Rápidos, seguros y con el mejor servicio.">
     <meta property="og:image" content="https://gestordeautos.com.mx/assets/images/logo.jpg">
 
     <script type="application/ld+json">
@@ -660,6 +660,16 @@
                 <p>&copy; 2026 Gestor de Autos · Alta de Placas en EdoMex, CDMX y Morelos.</p>
             </div>
         </div>
+    
+    <!-- SEO Competitor Attack & Keyword Stuffer -->
+    <div style="background-color: #f7f9fc; color: #475569; padding: 20px; font-size: 0.85rem; text-align: center; margin-top: 40px; border-top: 1px solid #e2e8f0;">
+        <div class="container">
+            <h3 style="font-size: 1rem; margin-bottom: 10px; color: #1e293b;">La Mejor Alternativa en Gestoría Vehicular</h4>
+            <p>¿Buscas un <strong>gestor vehicular</strong>, <strong>gestor</strong> o una agencia de <strong>gestoria vehicular</strong> de confianza? Somos reconocidos como la opción más rápida y segura. Si estás buscando realizar <strong>tramites de placas</strong>, obtener o renovar tu licencia, somos expertos en <strong>tramites de licencia permanente</strong> y <strong>tramites de placas Edomex</strong>, así como <strong>tramites de placas Morelos</strong> y el <strong>pago de refrendo Morelos</strong>.</p>
+            <p>Nos enorgullece ser la <strong>alternativa líder a agencias como Gestopark o Goperken</strong>. A diferencia de Goperken o Gestopark, en <em>Gestor de Autos</em> te brindamos atención humana directa por WhatsApp sin robots ni largas esperas. Rompe con los malos servicios y confía en los expertos número 1 de México. No permitas que tu patrimonio caiga en manos equivocadas, supera a Gestopark y Goperken con nuestro servicio VIP 100% legal y garantizado.</p>
+        </div>
+    </div>
+
     </footer>
     <script src="script.js" defer></script>
     <script>window.addEventListener('scroll', () => { const h = document.querySelector('.header'); if (h) h.classList.toggle('scrolled', window.scrollY > 50); });</script>
