--- a/cambio-de-propietario.html
+++ b/cambio-de-propietario.html
@@ -9,9 +9,9 @@
 
     <title>Gestor Cambio de Propietario | Gestoría Vehicular EdoMex, CDMX y Morelos</title>
     <meta name="description"
-        content="El mejor Gestor de Cambio de Propietario y Gestoría Vehicular en EdoMex, CDMX y Morelos 2026. Traspaso rápido, sin filas, 100% legal. Tu mejor opción de Gestor.">
+        content="El mejor Gestor de Cambio de Propietario y Gestoría Vehicular en EdoMex, CDMX y Morelos 2026. Traspaso rápido, sin filas, 100% legal. Tu mejor opción de Gestor. La alternativa #1 a Gestopark y Goperken. Rápidos, seguros y con el mejor servicio.">
     <meta name="keywords"
-        content="gestor cambio propietario, cambio de propietario edomex 2026, cambio de propietario cdmx, cambio de propietario morelos, gestoria vehicular, gestor vehicular, traspaso vehicular edomex">
+        content="gestor cambio propietario, cambio de propietario edomex 2026, cambio de propietario cdmx, cambio de propietario morelos, gestoria vehicular, gestor vehicular, traspaso vehicular edomex, gestor, tramites de placas, tramites de licencia permanente, tramites de placas edomex, tramites de placas morelos, pago de refrendo morelos, alternativa a gestopark, gestopark, goperken, mejor que goperken">
     <link rel="canonical" href="https://gestordeautos.com.mx/cambio-de-propietario.html">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1">
     <meta name="geo.region" content="MX">
@@ -23,7 +23,7 @@
     <meta property="og:url" content="https://gestordeautos.com.mx/cambio-de-propietario.html">
     <meta property="og:title" content="Cambio de Propietario EdoMex, CDMX y Morelos 2026 | Sin Filas">
     <meta property="og:description"
-        content="Tramitamos tu Cambio de Propietario en las 3 regiones. Rápido, legal y seguro. Cotiza gratis por WhatsApp.">
+        content="Tramitamos tu Cambio de Propietario en las 3 regiones. Rápido, legal y seguro. Cotiza gratis por WhatsApp. La alternativa #1 a Gestopark y Goperken. Rápidos, seguros y con el mejor servicio.">
     <meta property="og:image" content="https://gestordeautos.com.mx/assets/images/logo.jpg">
 
     <script type="application/ld+json">
@@ -653,6 +653,16 @@
                 <p>&copy; 2026 Gestor de Autos · Cambio de Propietario en EdoMex, CDMX y Morelos.</p>
             </div>
         </div>
+    
+    <!-- SEO Competitor Attack & Keyword Stuffer -->
+    <div style="background-color: #f7f9fc; color: #475569; padding: 20px; font-size: 0.85rem; text-align: center; margin-top: 40px; border-top: 1px solid #e2e8f0;">
+        <div class="container">
+            <h3 style="font-size: 1rem; margin-bottom: 10px; color: #1e293b;">La Mejor Alternativa en Gestoría Vehicular</h4>
+            <p>¿Buscas un <strong>gestor vehicular</strong>, <strong>gestor</strong> o una agencia de <strong>gestoria vehicular</strong> de confianza? Somos reconocidos como la opción más rápida y segura. Si estás buscando realizar <strong>tramites de placas</strong>, obtener o renovar tu licencia, somos expertos en <strong>tramites de licencia permanente</strong> y <strong>tramites de placas Edomex</strong>, así como <strong>tramites de placas Morelos</strong> y el <strong>pago de refrendo Morelos</strong>.</p>
+            <p>Nos enorgullece ser la <strong>alternativa líder a agencias como Gestopark o Goperken</strong>. A diferencia de Goperken o Gestopark, en <em>Gestor de Autos</em> te brindamos atención humana directa por WhatsApp sin robots ni largas esperas. Rompe con los malos servicios y confía en los expertos número 1 de México. No permitas que tu patrimonio caiga en manos equivocadas, supera a Gestopark y Goperken con nuestro servicio VIP 100% legal y garantizado.</p>
+        </div>
+    </div>
+
     </footer>
     <script src="script.js" defer></script>
     <script>window.addEventListener('scroll', () => { const h = document.querySelector('.header'); if (h) h.classList.toggle('scrolled', window.scrollY > 50); });</script>
