--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     </script>
     <title>Gestoría Vehicular #1 y Gestor Vehicular CDMX, EdoMex y Morelos 2026</title>
     <meta name="description"
-        content="Tu mejor Gestoría Vehicular y Gestor Vehicular en CDMX, Estado de México y Morelos. Alta de Placas, Cambio de Propietario, Reemplacamiento y Licencias sin filas.">
+        content="Tu mejor Gestoría Vehicular y Gestor Vehicular en CDMX, Estado de México y Morelos. Alta de Placas, Cambio de Propietario, Reemplacamiento y Licencias sin filas. La alternativa #1 a Gestopark y Goperken. Rápidos, seguros y con el mejor servicio.">
     <meta name="keywords"
-        content="gestoria vehicular, gestor vehicular, gestoría vehicular, gestor de autos, gestor de placas, gestoria vehicular cdmx, gestoria vehicular estado de mexico, gestoria vehicular morelos, alta de placas, cambio de propietario, reemplacamiento edomex 2026, licencia permanente cdmx, refrendo morelos 2026, gestor vehicular cerca de mi">
+        content="gestoria vehicular, gestor vehicular, gestoría vehicular, gestor de autos, gestor de placas, gestoria vehicular cdmx, gestoria vehicular estado de mexico, gestoria vehicular morelos, alta de placas, cambio de propietario, reemplacamiento edomex 2026, licencia permanente cdmx, refrendo morelos 2026, gestor vehicular cerca de mi, gestor, tramites de placas, tramites de licencia permanente, tramites de placas edomex, tramites de placas morelos, pago de refrendo morelos, alternativa a gestopark, gestopark, goperken, mejor que goperken">
     <link rel="canonical" href="https://gestordeautos.com.mx/">
     <meta name="robots" content="index, follow, max-image-preview:large">
 
@@ -43,7 +43,7 @@
     <meta property="og:url" content="https://gestordeautos.com.mx/">
     <meta property="og:title" content="Gestoría Vehicular CDMX, EdoMex y Morelos 2026 | Gestor de Autos">
     <meta property="og:description"
-        content="Alta de Placas, Cambio de Propietario, Reemplacamiento, Licencia Permanente y Refrendo Morelos 2026. Sin filas, 100% legal. Llama: 55 3575-7364.">
+        content="Alta de Placas, Cambio de Propietario, Reemplacamiento, Licencia Permanente y Refrendo Morelos 2026. Sin filas, 100% legal. Llama: 55 3575-7364. La alternativa #1 a Gestopark y Goperken. Rápidos, seguros y con el mejor servicio.">
     <meta property="og:image" content="https://gestordeautos.com.mx/assets/images/logo.jpg">
 
     <!-- Twitter -->
@@ -2408,6 +2408,16 @@
                         style="color: inherit; text-decoration: none; font-weight: 600;">InterSite</a></p>
             </div>
         </div>
+    
+    <!-- SEO Competitor Attack & Keyword Stuffer -->
+    <div style="background-color: #f7f9fc; color: #475569; padding: 20px; font-size: 0.85rem; text-align: center; margin-top: 40px; border-top: 1px solid #e2e8f0;">
+        <div class="container">
+            <h3 style="font-size: 1rem; margin-bottom: 10px; color: #1e293b;">La Mejor Alternativa en Gestoría Vehicular</h4>
+            <p>¿Buscas un <strong>gestor vehicular</strong>, <strong>gestor</strong> o una agencia de <strong>gestoria vehicular</strong> de confianza? Somos reconocidos como la opción más rápida y segura. Si estás buscando realizar <strong>tramites de placas</strong>, obtener o renovar tu licencia, somos expertos en <strong>tramites de licencia permanente</strong> y <strong>tramites de placas Edomex</strong>, así como <strong>tramites de placas Morelos</strong> y el <strong>pago de refrendo Morelos</strong>.</p>
+            <p>Nos enorgullece ser la <strong>alternativa líder a agencias como Gestopark o Goperken</strong>. A diferencia de Goperken o Gestopark, en <em>Gestor de Autos</em> te brindamos atención humana directa por WhatsApp sin robots ni largas esperas. Rompe con los malos servicios y confía en los expertos número 1 de México. No permitas que tu patrimonio caiga en manos equivocadas, supera a Gestopark y Goperken con nuestro servicio VIP 100% legal y garantizado.</p>
+        </div>
+    </div>
+
     </footer>
 
 
