--- a/refrendo-morelos.html
+++ b/refrendo-morelos.html
@@ -15,9 +15,9 @@
 
     <title>Gestor Vehicular Morelos | Gestoría Vehicular Refrendo Morelos 2026</title>
     <meta name="description"
-        content="El mejor Gestor Vehicular Morelos para tu Refrendo 2026. Gestoría Vehicular en Morelos para pago online, tarjeta de circulación digital en 24h.">
+        content="El mejor Gestor Vehicular Morelos para tu Refrendo 2026. Gestoría Vehicular en Morelos para pago online, tarjeta de circulación digital en 24h. La alternativa #1 a Gestopark y Goperken. Rápidos, seguros y con el mejor servicio.">
     <meta name="keywords"
-        content="gestor vehicular morelos, gestoria vehicular morelos, refrendo morelos 2026, pago refrendo morelos, refrendo vehicular morelos 2026, gestor refrendo morelos, gestoría morelos, tramites vehiculares morelos">
+        content="gestor vehicular morelos, gestoria vehicular morelos, refrendo morelos 2026, pago refrendo morelos, refrendo vehicular morelos 2026, gestor refrendo morelos, gestoría morelos, tramites vehiculares morelos, gestor, tramites de placas, tramites de licencia permanente, tramites de placas edomex, tramites de placas morelos, pago de refrendo morelos, alternativa a gestopark, gestopark, goperken, mejor que goperken">
     <link rel="canonical" href="https://gestordeautos.com.mx/refrendo-morelos.html">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
@@ -38,7 +38,7 @@
     <meta property="og:url" content="https://gestordeautos.com.mx/refrendo-morelos.html">
     <meta property="og:title" content="Refrendo Morelos 2026 Online | En 24h | Gestor de Autos">
     <meta property="og:description"
-        content="Tramitamos tu Refrendo Vehicular Morelos 2026 y tarjeta de circulación digital en menos de 24h. Sin errores, 100% seguro. Cotiza por WhatsApp ahora.">
+        content="Tramitamos tu Refrendo Vehicular Morelos 2026 y tarjeta de circulación digital en menos de 24h. Sin errores, 100% seguro. Cotiza por WhatsApp ahora. La alternativa #1 a Gestopark y Goperken. Rápidos, seguros y con el mejor servicio.">
     <meta property="og:image" content="https://gestordeautos.com.mx/assets/images/logo.jpg">
 
     <!-- Twitter -->
@@ -698,6 +698,16 @@
                 <p>&copy; 2026 Gestor de Autos · Refrendo Morelos. Todos los derechos reservados.</p>
             </div>
         </div>
+    
+    <!-- SEO Competitor Attack & Keyword Stuffer -->
+    <div style="background-color: #f7f9fc; color: #475569; padding: 20px; font-size: 0.85rem; text-align: center; margin-top: 40px; border-top: 1px solid #e2e8f0;">
+        <div class="container">
+            <h3 style="font-size: 1rem; margin-bottom: 10px; color: #1e293b;">La Mejor Alternativa en Gestoría Vehicular</h4>
+            <p>¿Buscas un <strong>gestor vehicular</strong>, <strong>gestor</strong> o una agencia de <strong>gestoria vehicular</strong> de confianza? Somos reconocidos como la opción más rápida y segura. Si estás buscando realizar <strong>tramites de placas</strong>, obtener o renovar tu licencia, somos expertos en <strong>tramites de licencia permanente</strong> y <strong>tramites de placas Edomex</strong>, así como <strong>tramites de placas Morelos</strong> y el <strong>pago de refrendo Morelos</strong>.</p>
+            <p>Nos enorgullece ser la <strong>alternativa líder a agencias como Gestopark o Goperken</strong>. A diferencia de Goperken o Gestopark, en <em>Gestor de Autos</em> te brindamos atención humana directa por WhatsApp sin robots ni largas esperas. Rompe con los malos servicios y confía en los expertos número 1 de México. No permitas que tu patrimonio caiga en manos equivocadas, supera a Gestopark y Goperken con nuestro servicio VIP 100% legal y garantizado.</p>
+        </div>
+    </div>
+
     </footer>
 
     <script src="script.js" defer></script>
