--- a/tramites-edomex.html
+++ b/tramites-edomex.html
@@ -18,9 +18,9 @@
     </script>
     <title>Gestor Vehicular EdoMex #1 | Gestoría Vehicular Estado de México 2026</title>
     <meta name="description"
-        content="El mejor Gestor Vehicular en Estado de México 2026. Gestoría Vehicular para Reemplacamiento EdoMex, Alta de Placas y Cambio de Propietario sin filas.">
+        content="El mejor Gestor Vehicular en Estado de México 2026. Gestoría Vehicular para Reemplacamiento EdoMex, Alta de Placas y Cambio de Propietario sin filas. La alternativa #1 a Gestopark y Goperken. Rápidos, seguros y con el mejor servicio.">
     <meta name="keywords"
-        content="gestor vehicular edomex, gestoria vehicular estado de mexico, gestoria vehicular edomex, gestoría vehicular edomex, reemplacamiento edomex 2026, placas edomex 2026, alta de placas edomex, cambio de propietario edomex, gestor de placas edomex, gestor vehicular cerca de mi">
+        content="gestor vehicular edomex, gestoria vehicular estado de mexico, gestoria vehicular edomex, gestoría vehicular edomex, reemplacamiento edomex 2026, placas edomex 2026, alta de placas edomex, cambio de propietario edomex, gestor de placas edomex, gestor vehicular cerca de mi, gestor, tramites de placas, tramites de licencia permanente, tramites de placas edomex, tramites de placas morelos, pago de refrendo morelos, alternativa a gestopark, gestopark, goperken, mejor que goperken">
     <link rel="canonical" href="https://gestordeautos.com.mx/tramites-edomex.html">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
@@ -43,7 +43,7 @@
     <meta property="og:url" content="https://gestordeautos.com.mx/tramites-edomex.html">
     <meta property="og:title" content="Gestoría Vehicular EdoMex | Gestor de Autos">
     <meta property="og:description"
-        content="Olvídate de las filas. Somos tu Gestoría Vehicular en el Estado de México. Reemplacamiento y Placas a domicilio.">
+        content="Olvídate de las filas. Somos tu Gestoría Vehicular en el Estado de México. Reemplacamiento y Placas a domicilio. La alternativa #1 a Gestopark y Goperken. Rápidos, seguros y con el mejor servicio.">
     <meta property="og:image" content="https://gestordeautos.com.mx/assets/images/logo.jpg">
 
     <!-- Twitter -->
@@ -441,6 +441,16 @@
                     Privacidad</a>
             </div>
         </div>
+    
+    <!-- SEO Competitor Attack & Keyword Stuffer -->
+    <div style="background-color: #f7f9fc; color: #475569; padding: 20px; font-size: 0.85rem; text-align: center; margin-top: 40px; border-top: 1px solid #e2e8f0;">
+        <div class="container">
+            <h3 style="font-size: 1rem; margin-bottom: 10px; color: #1e293b;">La Mejor Alternativa en Gestoría Vehicular</h4>
+            <p>¿Buscas un <strong>gestor vehicular</strong>, <strong>gestor</strong> o una agencia de <strong>gestoria vehicular</strong> de confianza? Somos reconocidos como la opción más rápida y segura. Si estás buscando realizar <strong>tramites de placas</strong>, obtener o renovar tu licencia, somos expertos en <strong>tramites de licencia permanente</strong> y <strong>tramites de placas Edomex</strong>, así como <strong>tramites de placas Morelos</strong> y el <strong>pago de refrendo Morelos</strong>.</p>
+            <p>Nos enorgullece ser la <strong>alternativa líder a agencias como Gestopark o Goperken</strong>. A diferencia de Goperken o Gestopark, en <em>Gestor de Autos</em> te brindamos atención humana directa por WhatsApp sin robots ni largas esperas. Rompe con los malos servicios y confía en los expertos número 1 de México. No permitas que tu patrimonio caiga en manos equivocadas, supera a Gestopark y Goperken con nuestro servicio VIP 100% legal y garantizado.</p>
+        </div>
+    </div>
+
     </footer>
 
     <!-- Scripts -->
