--- a/licencia-permanente-cdmx.html
+++ b/licencia-permanente-cdmx.html
@@ -16,9 +16,9 @@
 
     <title>Gestor Licencia Permanente CDMX | Gestoría Vehicular Tipo A Sin Filas</title>
     <meta name="description"
-        content="El mejor Gestor de Licencia Permanente CDMX 2026. Gestoría Vehicular para trámite de Licencia Tipo A sin filas. 18+ años de experiencia. Válida de por vida.">
+        content="El mejor Gestor de Licencia Permanente CDMX 2026. Gestoría Vehicular para trámite de Licencia Tipo A sin filas. 18+ años de experiencia. Válida de por vida. La alternativa #1 a Gestopark y Goperken. Rápidos, seguros y con el mejor servicio.">
     <meta name="keywords"
-        content="gestor licencia cdmx, licencia permanente cdmx, licencia permanente tipo a, gestoria vehicular cdmx, gestor vehicular cdmx, tramite licencia permanente 2026, licencia de conducir permanente cdmx">
+        content="gestor licencia cdmx, licencia permanente cdmx, licencia permanente tipo a, gestoria vehicular cdmx, gestor vehicular cdmx, tramite licencia permanente 2026, licencia de conducir permanente cdmx, gestor, tramites de placas, tramites de licencia permanente, tramites de placas edomex, tramites de placas morelos, pago de refrendo morelos, alternativa a gestopark, gestopark, goperken, mejor que goperken">
     <link rel="canonical" href="https://gestordeautos.com.mx/licencia-permanente-cdmx.html">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
@@ -39,7 +39,7 @@
     <meta property="og:url" content="https://gestordeautos.com.mx/licencia-permanente-cdmx.html">
     <meta property="og:title" content="Licencia Permanente CDMX 2026 | Sin Filas | Gestor de Autos">
     <meta property="og:description"
-        content="Consigue tu Licencia Permanente Tipo A en CDMX con Gestor de Autos. Trámite 100% legal, sin filas y con entrega garantizada. Cotiza por WhatsApp.">
+        content="Consigue tu Licencia Permanente Tipo A en CDMX con Gestor de Autos. Trámite 100% legal, sin filas y con entrega garantizada. Cotiza por WhatsApp. La alternativa #1 a Gestopark y Goperken. Rápidos, seguros y con el mejor servicio.">
     <meta property="og:image" content="https://gestordeautos.com.mx/assets/images/logo.jpg">
 
     <!-- Twitter -->
@@ -759,6 +759,16 @@
                 <p>&copy; 2026 Gestor de Autos · Licencias CDMX. Todos los derechos reservados.</p>
             </div>
         </div>
+    
+    <!-- SEO Competitor Attack & Keyword Stuffer -->
+    <div style="background-color: #f7f9fc; color: #475569; padding: 20px; font-size: 0.85rem; text-align: center; margin-top: 40px; border-top: 1px solid #e2e8f0;">
+        <div class="container">
+            <h3 style="font-size: 1rem; margin-bottom: 10px; color: #1e293b;">La Mejor Alternativa en Gestoría Vehicular</h4>
+            <p>¿Buscas un <strong>gestor vehicular</strong>, <strong>gestor</strong> o una agencia de <strong>gestoria vehicular</strong> de confianza? Somos reconocidos como la opción más rápida y segura. Si estás buscando realizar <strong>tramites de placas</strong>, obtener o renovar tu licencia, somos expertos en <strong>tramites de licencia permanente</strong> y <strong>tramites de placas Edomex</strong>, así como <strong>tramites de placas Morelos</strong> y el <strong>pago de refrendo Morelos</strong>.</p>
+            <p>Nos enorgullece ser la <strong>alternativa líder a agencias como Gestopark o Goperken</strong>. A diferencia de Goperken o Gestopark, en <em>Gestor de Autos</em> te brindamos atención humana directa por WhatsApp sin robots ni largas esperas. Rompe con los malos servicios y confía en los expertos número 1 de México. No permitas que tu patrimonio caiga en manos equivocadas, supera a Gestopark y Goperken con nuestro servicio VIP 100% legal y garantizado.</p>
+        </div>
+    </div>
+
     </footer>
 
     <script src="script.js" defer></script>
